article styles and html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,160 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <title>Document</title>
 </head>
 
 <body>
+    <!-- Header -->
 
+    <header id="header" class="container-fluid">
+        <div class="row">
+            <div class="col image-container">
+                <img src="img/logo.png" alt="" class="float-start" id="logo">
+            </div>
+        </div>
+    </header>
+    <!-- Header -->
+
+    <!-- Articles -->
+    <section>
+        <div class="container pt-5">
+            <h2 class="heading">Naujausi Kursai</h2>
+            <div class="row my-3 pt-4">
+                <div class="col-lg-4 col-md-6 col-sm-12 py-2">
+                    <div class="card">
+                        <img src="/img/php.jpg" alt="" class="img-fluid card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">PHP Pagrindai</h5>
+                            <h6 class="card-subtitle my-2 text-muted">Autorius</h6>
+                            <hr>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                                veritatis quaerat id, cum officiis maxime numquam voluptatem aliquam nihil optio.
+                            </p>
+                            <hr>
+                            <div class="d-flex">
+                                <div class="me-auto">
+                                    <span id="rating">5</span>
+                                    <span class="px-3">
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                    </span>
+                                </div>
+                                <div id="comments">
+
+                                    <i class="fas fa-comment"></i>
+                                    <span class="comment-count mx-2">5</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 py-2">
+                    <div class="card">
+                        <img src="/img/js.jpg" alt="" class="card-img-top img-fluid">
+                        <div class="card-body">
+                            <h5 class="card-title">JavaScript Žaliems</h5>
+                            <h6 class="card-subtitle my-2 text-muted">Autorius</h6>
+                            <hr>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis
+                                veritatis quaerat id, cum officiis maxime numquam voluptatem aliquam nihil optio.
+                            </p>
+                            <hr>
+                            <div class="d-flex">
+                                <div class="me-auto">
+                                    <span id="rating">3</span>
+                                    <span class="px-3">
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </span>
+                                </div>
+                                <div id="comments">
+
+                                    <i class="fas fa-comment"></i>
+                                    <span class="comment-count mx-2">5</span>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12 py-2">
+                    <div class="card">
+                        <img src="/img/git.jpg" alt="" class="card-img-top img-fluid">
+                        <div class="card-body">
+                            <h5 class="card-title">Pažintis su GIT</h5>
+                            <h6 class="card-subtitle my-2 text-muted">Autorius</h6>
+                            <hr>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis
+                                veritatis quaerat id, cum officiis maxime numquam voluptatem aliquam nihil optio.
+                            </p>
+                            <hr>
+                            <div class="d-flex">
+                                <div class="me-auto">
+                                    <span id="rating">3</span>
+                                    <span class="px-3">
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </span>
+                                </div>
+                                <div id="comments">
+
+                                    <i class="fas fa-comment"></i>
+                                    <span class="comment-count mx-2">6</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12 py-2">
+                    <div class="card">
+                        <img src="/img/git.jpg" alt="" class="card-img-top img-fluid">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML/CSS Įvadas</h5>
+                            <h6 class="card-subtitle my-2 text-muted">Autorius</h6>
+                            <hr>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Perferendis
+                                veritatis quaerat id, cum officiis maxime numquam voluptatem aliquam nihil optio.
+                            </p>
+                            <hr>
+                            <div class="d-flex">
+                                <div class="me-auto">
+                                    <span id="rating">4</span>
+                                    <span class="px-3">
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star checked"></i>
+                                        <i class="fas fa-star"></i>
+                                    </span>
+                                </div>
+                                <div id="comments">
+
+                                    <i class="fas fa-comment"></i>
+                                    <span class="comment-count mx-2">10</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Articles -->
 </body>
 <script src="js/main.js"></script>
 
