--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 py-2">
+                <div class="col-lg-4 col-md-6 col-sm-12 py-2">
                     <div class="card">
                         <img src="/img/git.jpg" alt="" class="card-img-top img-fluid">
                         <div class="card-body">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 py-2">
+                <div class="col-lg-4 col-md-6 col-sm-12 py-2">
                     <div class="card">
                         <img src="/img/git.jpg" alt="" class="card-img-top img-fluid">
                         <div class="card-body">
@@ -165,6 +165,42 @@
         </div>
     </section>
     <!-- Articles -->
+    <!-- contact -->
+    <section>
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="heading">Sekite Naujienas</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore.</p>
+                    <form>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Vardas</label>
+                            <input type="text" name="name" class="form-control" id="name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">El. Paštas</label>
+                            <input type="email" name="email" class="form-control" id="email">
+                        </div>
+
+                        <button type="submit" id="submit" name="submit" class="btn ">Užsisakyti</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- contact -->
+    <!-- footer -->
+    <div class="container-fluid" id="second-footer">
+        <div class="container">
+            <div class="row">
+                <hr>
+                <div class="col-lg-6 col-md-6">
+                    <p class="d-block">&#169; 2021 Justinas Velička</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
 </body>
 <script src="js/main.js"></script>
 
