Added JS validate and timer functions for validation message

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                     <div class="card">
                         <img src="/img/php.jpg" alt="" class="img-fluid card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">PHP Pagrindai</h5>
+                            <a id="link" href="#">
+                                <h5 class="card-title">PHP Pagrindai</h5>
+                            </a>
                             <h6 class="card-subtitle my-2 text-muted">Autorius</h6>
                             <hr>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -68,7 +70,9 @@
                     <div class="card">
                         <img src="/img/js.jpg" alt="" class="card-img-top img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">JavaScript Žaliems</h5>
+                            <a id="link" href="#">
+                                <h5 class="card-title">JavaScript Žaliems</h5>
+                            </a>
                             <h6 class="card-subtitle my-2 text-muted">Autorius</h6>
                             <hr>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -101,7 +105,9 @@
                     <div class="card">
                         <img src="/img/git.jpg" alt="" class="card-img-top img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">Pažintis su GIT</h5>
+                            <a id="link" href="#">
+                                <h5 class="card-title">Pažintis su GIT</h5>
+                            </a>
                             <h6 class="card-subtitle my-2 text-muted">Autorius</h6>
                             <hr>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -133,7 +139,9 @@
                     <div class="card">
                         <img src="/img/git.jpg" alt="" class="card-img-top img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">HTML/CSS Įvadas</h5>
+                            <a id="link" href="#">
+                                <h5 class="card-title">HTML/CSS Įvadas</h5>
+                            </a>
                             <h6 class="card-subtitle my-2 text-muted">Autorius</h6>
                             <hr>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -171,7 +179,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2 class="heading">Sekite Naujienas</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, inventore.</p>
+                    <p>Norite gauti pranešimus apie naujus kursus? Užsisakykite mūsų naujienlaiškį.</p>
+                    <p id="newsletter"></p>
                     <form>
                         <div class="mb-3">
                             <label for="name" class="form-label">Vardas</label>
